--- a/whatsapp.css
+++ b/whatsapp.css
@@ -1,3 +1,4 @@
+
 @import url('https://fonts.googleapis.com/css2?family=Open+Sans:wght@300;400;500;600;700&display=swap');
 
  *{
@@ -26,8 +27,7 @@ body {
 }
 
 .container .leftSide{
-
-       position: relative;
+      position: relative;
        flex: 30%;
        background: #fff;
        border-right: 1px solid rgba(0,0,0,0.2);
@@ -39,6 +39,7 @@ body {
     position: relative;
     flex: 70%;
     background: #e5ddd5;
+
      
 }
 
@@ -49,7 +50,7 @@ body {
        left: 0;
        width: 100%;
        height: 100%;
-       background: url('/Users/Navgurukul/Desktop/Tictac game/images/pattern.jpg');
+       background: url('/Uses/Navgurukul/Desktop/Tictac game/images/pattern.jpg');
        opacity: 0.06;
     }
 
@@ -65,8 +66,8 @@ body {
 
 }
 
-.usering{
-    position: relative;
+.userimg{
+    position: relative; 
     width: 40px;
     height: 40px;
     overflow: hidden;
@@ -253,7 +254,7 @@ body {
 .chatbox{
     position: relative;
     width: 100%;
-    height: calc(100% - 120%);  /*60 + 60 =120px*/
+    height: calc(25% + 60%);  /*60 + 60 =120px*/
     padding: 50px;
     overflow-y: auto;
 }
